[tool.poetry]
name = "Auctioneer"
version = "0.1.0"
description = "A quick and dirty Discord bot to post updates for an auction by periodically polling Google Sheets."
authors = ["lucasbeef00@gmail.com <lucasbeef00@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
gspread = "^3.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
